@@ -1,3 +1,7 @@
+2006-10-10 Kimmo
+ PATCH: [ 1573933 ] Manual: Update introduction chapter
+  Manual: Introduction.xml
+
 2006-10-07 Tim
  BUG: [ 1572388 ] Wrong link to regex.pdf
   Manual: Filters.xml
